# phpembed

./: CMakeLists.txt  README
cmake/Modules/: FindPHP5.cmake
examples/: CMakeLists.txt
src/: CMakeLists.txt
